# sdk-python

./: .gitignore  ArchitectOverview.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/api/: _index.md  chat.md  database.md  echo.md  membership.md
docs/hub/: _index.md  account.md  ai.md  database.md  echo.md  email.md  files.md  internal.md  logs.md  membership.md  notifications.md  payments.md  scheduler.md  webhooks.md
references/: api2.dtos.ts  api_dtos.py  hub2.dtos.ts  hub_dtos.py
scripts/: generate_endpoints.py  sync_types.py
src/norbix_python/: __init__.py  client.py  errors.py  models.py  transport.py
src/norbix_python/api/: __init__.py  chat.py  database.py  echo.py  membership.py
src/norbix_python/facade/: __init__.py  database.py
src/norbix_python/hub/: __init__.py  account.py  ai.py  database.py  echo.py  email.py  files.py  internal.py  logs.py  membership.py  notifications.py  payments.py  scheduler.py  webhooks.py
tests/: helpers.py  test_async_client_smoke.py  test_client.py  test_sync_async_parity.py
tests/api/: test_chat.py  test_database.py  test_echo.py  test_membership.py
tests/hub/: test_account.py  test_ai.py  test_database.py  test_echo.py  test_email.py  test_files.py  test_internal.py  test_logs.py  test_membership.py  test_notifications.py  test_payments.py  test_scheduler.py  test_webhooks.py
