[project]
name = "norbix-python"
version = "0.0.0"
description = "Official Python SDK for Norbix — one client for both API and Hub."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "UAB Isidos" }]
keywords = ["norbix", "sdk", "python", "api", "hub", "baas"]
dependencies = ["httpx>=0.27.0", "pydantic>=2.0"]

[project.urls]
Homepage = "https://norbix.dev"
Repository = "https://github.com/norbix-dev/norbix-python"
Issues = "https://github.com/norbix-dev/norbix-python/issues"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "python-semantic-release>=9.15.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/norbix_python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "scripts"]
exclude = [".venv", "references"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "F401", "I001"]
"src/norbix_python/api/*.py" = ["E501"]
"src/norbix_python/hub/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
show_error_codes = true
exclude = ["^docs/"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/norbix_python/__init__.py:__version__"]
branch = "main"
upload_to_pypi = true
build_command = "uv build"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.next]
match = "next"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.branches.beta]
match = "beta"
prerelease = true
prerelease_token = "beta"
